k8s/api-depl-service.yaml
apivVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api-deployment
  labels:
    app: fraud-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-api
  template:
    metadata:
      labels:
        app: fraud-api
    spec:
      containers:
        - name: fraud-api
          image: derabyte/fraud-api:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-service
spec:
  selector:
    app: fraud-api
  type: LoadBalancer
  ports:
    - port: 8000
      targetPort: 8000
